added mail templates

--- a/net.ostis.confman.ui/templates/Test.vm
+++ b/net.ostis.confman.ui/templates/Test.vm
@@ -1,4 +1,4 @@
-Здравствуйте, уважаемый(ая) $fullName!
+﻿Здравствуйте, уважаемый(ая) $fullName!
 
 Приглашаем Вас принять участие в конференции $conferenceTitle!
 Конференция состоится $conferenceDate, по адресу: $conferenceAddress.
