--- a/net.ostis.confman.ui/templates/Inconsistency registration rules.vm
+++ b/net.ostis.confman.ui/templates/Inconsistency registration rules.vm
@@ -1,3 +1,6 @@
+#set( $firstPart = "(http://www.conf.ostis.net/images/b/be/Правила_оформления_публикуемых_материалов_" )
+#set( $endPart = ".zip)" )
+#set($link = "$firstPart$conferenceTitle$endPart" )
 Уважаемые коллеги!
 
 Спасибо за интерес к нашей конференции. Ваша статья не соответствует правилам 
@@ -6,6 +9,6 @@
 
 материалов доступны на нашем сайте 
 
-(http://www.conf.ostis.net/images/b/be/Правила_оформления_публикуемых_матери
+$link. 
 
-алов_$conferenceTitle.zip). До УКАЗАТЬ КОНКРЕТНУЮ ДАТУ года ожидаем исправленный вариант статьи.
+До УКАЗАТЬ КОНКРЕТНУЮ ДАТУ года ожидаем исправленный вариант статьи.
