--- a/net.ostis.confman.ui/templates/Personal invitation.vm
+++ b/net.ostis.confman.ui/templates/Personal invitation.vm
@@ -1,32 +1,17 @@
-Уважаемый Иван Иванович Иванов!
+Уважаемый(ая) $fullName!
 
-#if($reports.size() > 1)          
-    Ваши доклады 
-	#foreach ($report in $reports)
-		$report.getTitle() ,
-		$report.getMainAuthor() , 
-        #set($authors = $report.getAllAuthors())
-    #end
-	включёны
-#else
-    Ваш доклад $reportName, $authors включён
-#end
-в программу конференции 
-
-$conferenceTitle , которая состоится $conferenceDates в г. Минске. 
-
+#if($reports.size() > 1)Ваши доклады#elseВаш доклад #end #foreach ($report in $reports) $report.getTitle() #set($authors = $report.getAllAuthors()) #foreach ($author in $authors) , $author.getPerson().getFullName() #end
+#end 
+#if($reports.size() > 1) 
+включёны 
+#else 
+включён 
+#end 
+в программу конференции $conferenceTitle , которая состоится $conferenceDates в г. Минске. 
 Приглашаем Вас принять участие в работе конференции.
-
-Командировочные удостоверения необходимо выписывать на Учреждение 
-
+Командировочные удостоверения необходимо выписывать на Учреждение  
 образования «Белорусский государственный университет информатики и 
-
 радиоэлектроники» (УО БГУИР).
-
 Сообщите о дате и времени своего прибытия, а также укажите гостиницу, в 
-
 которой собираетесь остановиться.
-
-Всю необходимую информацию Вы можете найти на сайте конференции 
-
-http://conf.ostis.net.
+Всю необходимую информацию Вы можете найти на сайте конференции http://conf.ostis.net.
